Add Tasks for moving Elevators and Adding people to queue. Removed Elevator Types and replaced with elevator config. Changed void to Task Functions.

--- a/DVT.Elevator.Challenge/AppSettings.json
+++ b/DVT.Elevator.Challenge/AppSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "NumberOfFloors": 10,
   "NumberOfPeople": 0,
-  "RefreshTime": "00:00:05",
+  "ElevatorFloorMove": "00:00:10",
   "ElevatorConfig": [
     {
       "ElevatorDesignation": "Freigter",
