Add Elevator Clients and Service. Fix Console Responsiveness.

--- a/DVT.Elevator.Challenge/AppSettings.json
+++ b/DVT.Elevator.Challenge/AppSettings.json
@@ -8,28 +8,32 @@
       "WeightCapacity": 3000,
       "PersonCapacity": 18,
       "LocationZone": 9,
-      "MaxLevelReached": 10
+      "MaxLevelReached": 10,
+      "IsEnabled": true
     },
     {
       "ElevatorDesignation": "Freigter",
       "WeightCapacity": 1300,
       "PersonCapacity": 10,
       "LocationZone": 12,
-      "MaxLevelReached": 5
+      "MaxLevelReached": 5,
+      "IsEnabled": false
     },
     {
       "ElevatorDesignation": "Passenger",
       "WeightCapacity": 200,
       "PersonCapacity": 8,
       "LocationZone": 1,
-      "MaxLevelReached": 10
+      "MaxLevelReached": 10,
+      "IsEnabled": true
     },
     {
       "ElevatorDesignation": "High Speed",
       "WeightCapacity": 150,
       "PersonCapacity": 4,
-      "LocationZone": 2,
-      "MaxLevelReached": 10
+      "LocationZone": 1,
+      "MaxLevelReached": 10,
+      "IsEnabled": true
     }
   ]
 }
