Add Elevator Background Service #3

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /DVT.Elevator.Challenge.Domain/obj
 /DVT.Elevator.Challenge.DomainLogic/bin/Debug/net8.0
 /DVT.Elevator.Challenge.DomainLogic/obj
+/DVT.Elevator.Challenge.DomainLogic/DVT.Elevator.Challenge.DomainLogic.csproj.user
